# smart_buf

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cpp  build.sh  example.cpp  smart_buffer.hpp  test.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: README.md  SmartBufferConfig.cmake.in
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
include/: CMakeLists.txt  smart_buffer.hpp
tests/: CMakeLists.txt  test.cpp
